// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Inference: lambdas > explicit lambda with param annotation 1`] = `
{
  "displays": {
    "constraints": [
      "Type ~~ Type",
    ],
    "term": "(λ(x: String) -> 1 : Π(x: String) -> Num)",
    "type": "Π(x: String) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > explicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "(λ(x: (?1 :: Type)) -> 1 : Π(x: (?1 :: Type)) -> Num)",
    "type": "Π(x: ?1) -> (closure: Num -| Γ: x)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > higher order function with implicit param 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: (?3 :: Type) -| Γ: x; f)",
      "Num ~~ ?2",
    ],
    "term": "(λ(f: (?1 :: Type)) => f 1 : Π(f: (?1 :: Type)) => (?3 :: Type))",
    "type": "Π(f: ?1) => (closure: (?3 :: Type) -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > higher order functions > simple higher order function 1`] = `
{
  "displays": {
    "constraints": [
      "?1 ~~ Π(x: ?2) -> (closure: (?3 :: Type) -| Γ: x; f)",
      "Num ~~ ?2",
    ],
    "term": "(λ(f: (?1 :: Type)) -> f 1 : Π(f: (?1 :: Type)) -> (?3 :: Type))",
    "type": "Π(f: ?1) -> (closure: (?3 :: Type) -| Γ: f)",
  },
}
`;

exports[`Inference: lambdas > implicit lambda without annotation 1`] = `
{
  "displays": {
    "constraints": [],
    "term": "(λ(x: (?1 :: Type)) => 1 : Π(x: (?1 :: Type)) => Num)",
    "type": "Π(x: ?1) => (closure: Num -| Γ: x)",
  },
}
`;
